--- a/mobike/templates/mobike/regis_edit.html
+++ b/mobike/templates/mobike/regis_edit.html
@@ -29,11 +29,12 @@
             </nav>
         </div>  
 
-        <div class= "carousel-container">
-            
-            </div>
-        
-        <div class="general-container">
+        <div class="contenedor-formulario">
+			<form method="POST" enctype="multipart/form-data" class="item-form">{% csrf_token %}
+				{{ form.as_p }}
+			  <button type="submit">Registrar</button>
+			</form>
+		  </div>
             
         </div>
         <script src="{% static 'js/javamenu.js' %}"></script>
