--- a/mobike/templates/mobike/main.html
+++ b/mobike/templates/mobike/main.html
@@ -123,8 +123,8 @@ body {margin:0;font-family:Arial}
   <a href="#home" class="active">
       Logo
   </a>
-  <a href="#news">Listar Bicicletas</a>
-  <a href="#contact">Registrarse</a>
+  <a href="obtener-disponibles/">Listar Bicicletas</a>
+  <a href="agregarCliente/">Registrarse</a>
   <a href="#about">Solicitar Bicicleta</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
